Ensure navbar never covered

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -2,6 +2,7 @@
   padding-left: 15px;
   padding-right: 25px;
   width:100%;
+  z-index: 10000;
   &.wide {
     padding: 0;
     // -webkit-transition: padding 1.0s ease;
